develops the case to handle ChallengeNotFound